# my-project-bingo

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  bingo.db  docker-compose.yml  main.py  pyproject.toml  run.sh  run_app.command
.github/workflows/: tests.yml
data/: bingo.db
docs/: architecture.md  docker_plan.md
game/: Dockerfile  pyproject.toml
game/clients/: persistence_client.py
game/game/: __init__.py
game/game/clients/: persistence_client.py
game/game/core/: bingo_card.py  number_drawer.py
game/game/ui/: app.py
game/src/: bingo_card.py  number_drawer.py
game/tests/: test_bingo_card.py  test_number_drawer.py  test_persistence_client.py
game/ui/: app.py
persistence/: Dockerfile  pyproject.toml
persistence/persistence/api/: api.py  models.py
persistence/persistence/core/: __init__.py  constants.py  repository.py
persistence/src/: api.py  repository.py  sql_constants.py
persistence/tests/: test_api.py  test_repository.py
src/api/: __init__.py  leaderboard.py
src/game/: __init__.py  bingo_card.py  exeptions.py  number_drawer.py  test_repository.py  win_checker.py
src/persistence/: repository.py  sql_constants.py
src/ui/: __init__.py  cli.py  constants.py  gui.py  streamlit_app.py
tests-integration/: test_full_game_flow.py  test_multiplayer_ui.py  test_repository_flow.py  test_streamlit_app.py
tests/integration/: test_full_game_flow.py  test_repository_flow.py  test_streamlit_app.py
tests/unit/: test_api.py  test_app_utils.py  test_bingo_card.py  test_cli.py  test_number_drawer.py  test_repository.py  test_win_checker.py
