[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-project-bingo"
version = "0.1.0"
description = "Terminal-based Bingo game playable from the command line."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "main.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
