[project]
name = "my-project-bingo"
version = "0.1.0"
description = "Bingo game project with persistence and UI services"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.51.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "fastapi>=0.115.0", # For TestClient in tests
    "requests>=2.32.0", # For mocking HTTP requests in tests
]
