[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bingo-persistence"
version = "0.1.0"
description = "Persistence API for Bingo leaderboard using FastAPI and SQLite"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
